--- a/javascript/shared-package/api-version-mismatch.handlebars
+++ b/javascript/shared-package/api-version-mismatch.handlebars
@@ -1,6 +1,6 @@
 <div class="notification-bar" style="display:none;">
 {% if login_notification %}
-	<span class="notification-bar-content">The version of this page that you are viewing is out of date, and some features may stop working. Please <a href="javascript: location.reload(true)">refresh the page</a>.</span>
+	<span class="notification-bar-content"> De versie van de pagina die u bekijkt is een oude versie. Sommige kenmerken kunnen veranderen of stoppen met werken. Laad de pagina alstublieft <a href="javascript: location.reload(true)">opnieuw</a>.</span>
 	<span class="notification-bar-close">(<a href="javascript:">close</a>)</span>
 {% endif %}
 </div>
