button at search bar (exercises)

--- a/templates/exerciseadmin.html
+++ b/templates/exerciseadmin.html
@@ -89,7 +89,7 @@
     <div class="dashboard-drawer-inner fancy-scrollbar"><div>
 
        <div class="dashboard-filter">
-          <input type="text" class="dashboard-filter-text ui-corner-all simple-input" placeholder="Start typing the name of an exercise to find it" /><input type="button" value="Clear" class="dashboard-filter-clear simple-button ui-corner-right strict" style="display: none;"></input>
+          <input type="text" class="dashboard-filter-text ui-corner-all simple-input" placeholder="Start typing the name of an exercise to find it" /><input type="button" value="Leeg" class="dashboard-filter-clear simple-button ui-corner-right strict" style="display: none;"></input>
        </div>
        <div class="exercise-list">
         <span class="exercise-sublist dashboard-all-exercises">
