--- a/templates/about/gettingstarted.html
+++ b/templates/about/gettingstarted.html
@@ -103,7 +103,7 @@
         <h2> Meer dan alleen video's</h2>
         <p class="justify">
             Onze <a href="/#browse">collectie video's</a> omvat op dit moment vooral <strong>rekenen en wiskunde</strong>. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
-            Geïnspireerd door de video's van Salman Khan en zijn woorden: ''Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen. 
+            Geïnspireerd door de video's van Salman Khan en zijn woorden: 'Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen.'
             Voor onze website willen wij graag dat iedereen die denkt een bijdrage te kunnen leveren in het onderwijs via de Khan Academie die kans krijgt. Bij help mee kun je zien hoe ook jij van betekenis kunt zijn voor de Khan Academie.</em><br/>
             &mdash;
         </p>
