--- a/javascript/shared-package/badge-notifications.handlebars
+++ b/javascript/shared-package/badge-notifications.handlebars
@@ -1,6 +1,6 @@
 
 <h3>Nieuwe badge{{plural this.length}} <span style="font-weight:normal; float: right; font-size: 12px;">(<a href="javascript:void(0)" class="hide-badge">sluit</a>)</span></h3>
->>>>>>> nieuwe badge
+nieuwe badge
 {{#each this}}
     <div class="badge-container" style="margin-bottom:5px;">
         <a href="{{relativeUrl}}" class="big-button" target="_blank">
