bugherd/#242 close, size of energy points buttons

--- a/javascript/profile-package/user-card.handlebars
+++ b/javascript/profile-package/user-card.handlebars
@@ -23,7 +23,9 @@
                   <img class="summary-icon" src="/images/profile-icons/inset-camera.png">
                   <div class="stat-text">{{countVideosCompleted}}<span class="stat-divider">/</span>{{countVideos}}</div>
               </div>
-              <div class="simple-stat"><span title="{{commafy points}} energy points" class="energy-points-badge" style="float:none; display:block; margin-bottom: 1px; margin-top: 2px; padding:0; line-height: 20px;">{{commafy points}}</span> Energiepunten</div>
+              <div class="simple-stat"><span title="{{commafy points}}
+	      energy points" class="energy-points-badge"
+	      style="float:none; display:block; margin-bottom: 1px; margin-top: 2px; padding:0; line-height: 32px;">{{commafy points}}</span> Energiepunten</div>
           </div>
           <div class="user-profile-controls clearfix">
           {{#if isEditable}}
