Add topic icons when showing exercises, fix publishing when running local

--- a/javascript/exercises-package/exercise-header.handlebars
+++ b/javascript/exercises-package/exercise-header.handlebars
@@ -15,12 +15,12 @@ Review
     <span class="practice-exercise-displayname">{{practiceExercise.displayName}}</span>
     <span class="practice-exercise-topic-context">in </span>
     <span class="practice-exercise-topic-context solid-hover">
-        <img class="topic-exercise-image inline" src="{{topicExerciseBadge.icons.compact}}">
+        <img class="topic-exercise-image inline" src="{{topic.icon_name}}">
         <a href=".">{{topic.standaloneTitle}}</a>
     </span>
     {{else}}
     <div class="topic-exercise-badge">
-	    <img class="topic-exercise-image" src="{{topicExerciseBadge.icons.compact}}">
+	    <img class="topic-exercise-image" src="{{topic.iconUrl}}">
     </div>
 	{{topic.standaloneTitle}}
 
