--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -95,7 +95,8 @@
         {% if (video_count == 0 and topic_count == 0) %}
 	    Geen video's gevonden. Probeer andere zoektermen.	
         {% else %}
-            {{ video_count }} video{{ video_count|pluralize }} gevonden in {{ topic_count }} onderwerp{{ topic_count|pluralize }} die voldoen{% if video_count == 1 %}es{% endif %} aan jouw zoektocht:
+        {# XXX would be proper to pluralize with gettext #}
+        {{ video_count }} {% if video_count == 1 %}video{% else %}video's{% endif %} gevonden in {{ topic_count }} onderwerp{{ topic_count|pluralize }} die {% if video_count == 1 %}voldoet{% else %}voldoen{% endif %} aan jouw zoektocht:
         {% endif %}
     </section>
     {% if topics %}
