--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -92,7 +92,7 @@
     {% endif %}
 
     <section class="searchresult-counts">
-        {% if (_count == 0 and topic_count == 0) %}
+        {% if (video_count == 0 and topic_count == 0) %}
 	    Geen video's gevonden. Probeer andere zoektermen.	
         {% else %}
         {# XXX would be proper to pluralize with gettext #}
