Votes translated (discussion)

--- a/templates/discussion/mod/flaggedfeedback.html
+++ b/templates/discussion/mod/flaggedfeedback.html
@@ -6,13 +6,13 @@
         Go go power rangers!
         <ul class="tabrow">
             <li class="selected" data-type="question">
-                <a href="javascript:void(0);">Questions</a>
+                <a href="javascript:void(0);">Vragen</a>
             </li>
             <li data-type="answer">
-                <a href="javascript:void(0);">Answers</a>
+                <a href="javascript:void(0);">Antwoorden</a>
             </li>
             <li data-type="comment">
-                <a href="javascript:void(0);">Comments</a>
+                <a href="javascript:void(0);">Opmerkingen</a>
             </li>
         </ul>
     </div>
@@ -20,11 +20,11 @@
         <span class="feedback-sort-links">
             <a data-value="1" class="selected" href="javascript:void(0);">
                 Heuristics</a>
-            <a data-value="2" href="javascript:void(0);">Votes</a>
+            <a data-value="2" href="javascript:void(0);">Stemmen</a>
         </span>
     </h2>
     <div id="feedback-list"></div>
-    <input class="load-more simple-button" type="button" value="View more items">
+    <input class="load-more simple-button" type="button" value="Laat meer zien">
 </div>
 {% endblock panelcontent %}
 
