Changes header and homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -60,10 +60,10 @@
                     </h1>
 
                     <p>
-                        Wij zijn op een missie om jou
-                        te helpen alles te leren over onderwerpen waar jij interesse in hebt, wanneer jij het wilt en in
-                        je
-                        eigen tempo.
+                        Wij zijn op een missie om jou te helpen alles te leren, over onderwerpen 
+						die jou interesseren, wanneer jij het wilt en in je eigen tempo. De 
+						uiteenlopende onderwerpen worden met een groeiend aantal
+						aangeboden in de vorm van video’s en oefeningen. 
                     </p>
 
                     <!-- TODO delete non-relevant text
@@ -88,7 +88,7 @@
                     <a href="/exercisedashboard" data-tag="Homepage C2A" class="call-to-action simple-button blue">Ga de uitdaging aan</a>
                 </div>
                 -->
-                    <a class="begin-button" href="/exercisedashboard">Begin met oefenen!</a>
+                    <a class="begin-button" href="/exercisedashboard"></a> <a href="/exercisedashboard">Begin met oefenen!</a>
                 </div>
             </div>
         </div>
@@ -187,7 +187,7 @@
                     </span>&nbsp;geleverde lessen:
             </span>
                 </div>
-                <h2 class="main-headline">Video's:</h2>
+                <h2 class="main-headline">Blader door video's:</h2>
                 {% if DVD_list %}
                     <ul class="menu" id="menu">
                         {% for topic in DVD_list %}
