--- a/stylesheets/homepage-package/homepage.css
+++ b/stylesheets/homepage-package/homepage.css
@@ -25,25 +25,25 @@ a.blog-title:visited {
 }
 
 a.begin-button {
-    width: 227px;
+    width: 150px;
     max-width: 80%;
-    background-image: linear-gradient(top, #1CAEEC, #1E7EC0);
-    background-image: -o-linear-gradient(top, #1CAEEC, #1E7EC0);
-    background-image: -moz-linear-gradient(top, #1CAEEC, #1E7EC0);
-    background-image: -webkit-linear-gradient(top, #1CAEEC, #1E7EC0);
-    background-image: -ms-linear-gradient(top, #1CAEEC, #1E7EC0);
+    background-image: url("/images/oefeningen-button-blauw.png");
+    background-repeat:no-repeat;
     border-radius: 8px;
-    font-size: 22px;
-    display: block;
+    font-size: 16px;
+    display: inline;
     text-align: center;
-    vertical-align: middle;
-    margin-left: auto;
+    vertical-align: middle; 
+    margin-left: 30px;
     margin-right: auto;
     text-shadow: 0px 1px 1px black;
     box-shadow: 0px 1px 1px grey;
     color: white;
-    padding: 16px;
-    margin-top: 16px;
+    padding-top: 22px;
+	padding-bottom: 0px;
+	padding-left: 30px;
+	padding-right: 30px;
+    margin-top: 40px;
 }
 
 a.begin-button:hover {
@@ -91,6 +91,7 @@ a.begin-button:visited {
 #homepage-text h1 {
     text-align: center;
     padding-top: 0.8em;
+    margin-left: -165px;
 }
 
 #homepage-text p {
@@ -99,7 +100,8 @@ a.begin-button:visited {
 
 #social-actions {
     margin-bottom: 26px;
-    margin-top: 33px;
+    margin-top: 15px;
+	margin-left: 875px;
 }
 
 #social-actions table {
