--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -64,7 +64,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     color: #444;
-    background: rgb(226, 231, 252);
+    background: #f5f5f5;
     line-height: 22px;
 }
 
@@ -91,7 +91,7 @@ article {
     background: #fff;
     position: relative;
     margin: 0 1px;
-    border: 1px solid #ADD1CA;
+    border: 1px solid rgb(231, 231, 231);
 }
 
 /* Basic typography for the entire site */
@@ -104,10 +104,11 @@ h1, h2, h3, h4, h5 {
 h1 {
     font-size: 1.5em;
     margin-bottom: 22px;
+   
 }
 
 .main-headline, .section-headline {
-    padding-top: 22px;
+    padding-top: 80px;
 }
 
 .main-headline a, .section-headline a {
@@ -258,7 +259,7 @@ header a:visited,
 footer a:visited,
 .visited-no-recolor a:visited,
 a.visited-no-recolor:visited {
-    color: #005987;
+    color:rgb(0, 9, 112);
     text-decoration: none;
 }
 
@@ -317,7 +318,6 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 
 #footer.short {
     color: #555;
-    border-top: 1px solid #ADD1CA;
     z-index: 10;
 }
 
@@ -481,7 +481,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 #navbar {
     min-height: 84px; /*navbar height*/
     width: 100%;
-    margin: 8px 0 8px 0;
+    margin: 8px 20px 8px 0;
     display: inline-block;
     text-align: right;
 }
@@ -666,9 +666,11 @@ a.about-link.selected:after {
 #topic-jump > span {
     float: left;
     font-size: 0.938em;
-    color: #555;
+    color: #06004d;
     text-shadow: 0 1px 0 rgba(255, 255, 255, .9);
-    font-weight: bold;
+    font-weight: lighter;
+    font-style: italic;
+    margin-top: 4px;
 }
 
 #topic-jump nav ul {
@@ -909,8 +911,8 @@ span.username_and_notification .user-name {
 }
 
 #search-box {
-    margin-top: 20px;
-    text-align: center;
+    margin:20px;
+    margin right:-200px;
 }
 
 #search-box form input {
@@ -922,6 +924,8 @@ span.username_and_notification .user-name {
 .page-search {
     display: block;
     padding: 0;
+    margin-top: 52px;
+    margin-right:-16px;
 }
 
 #search-input {
@@ -932,7 +936,6 @@ span.username_and_notification .user-name {
 
 .simple-input {
     background-color: #fafafa;
-    border: 1px solid #ADD1CA;
     font-size: 0.625em;
     padding: 0;
     height: 24px;
@@ -942,8 +945,8 @@ span.username_and_notification .user-name {
 }
 
 .simple-input:focus {
-    -webkit-box-shadow: inset 0 0 5px rgba(115, 152, 44, .5);
-    -moz-box-shadow: inset 0 0 5px rgba(115, 152, 44, .5);
+    -webkit-box-shadow: inset 0 0 5px #c4c4c4
+    -moz-box-shadow: inset 0 0 5px #c4c4c4
     box-shadow: inset 0 0 5px rgba(115, 152, 44, .5);
 }
 
@@ -1087,9 +1090,9 @@ nav {
     z-index: 20;
     background: #fff;
     color: #444;
-    border: 1px solid #ADD1CA;
+    border: 1px solid rgb(226, 226, 226);
     border-bottom: none;
-    border-top-color: #ADD1CA;
+    border-top-color: rgb(226, 226, 226);
     width: auto;
 }
 
@@ -1254,7 +1257,7 @@ span.youTube:hover {
 
 #library-content .library-content-list a.vl {
     display: block;
-    line-height: 18px;
+    line-height: 14px;
     overflow: hidden;
     padding-left: 14px;
     text-decoration: none;
@@ -2957,9 +2960,9 @@ div.arrow-left-shadow {
 #logo {
     display: inline-block;
     float:left;
-    width: 133px;
-    height: 73px;
-    background-image: url("/images/khan-logo-header.png");
+    width: 220px;
+	height: 136px;
+    background-image: url("/images/logo-kahn.png");
     left: 0;
     margin-left: 24px;
 }
@@ -3003,8 +3006,8 @@ ul.topic-browser-menu > li > ul > li > a {
 
 #homepage .topic_browser {
     padding: 4px 10px;
-    background: #DCEFEC;
-    border: 1px solid #ADD1CA;
+    background: rgb(231, 231, 231);
+    border: 1px solid rgb(207, 207, 207);
     margin-bottom: 0px;
     margin-top: 20px;
 }
