'flag as' translated

--- a/javascript/discussion-package/flag-controls.handlebars
+++ b/javascript/discussion-package/flag-controls.handlebars
@@ -1,15 +1,15 @@
 <span class="flag_tools">
     <span class="control flag_tools_show">
-        <a href="#" class="control flag_show" title="Flag for moderator attention">
+        <a href="#" class="control flag_show" title="Rapporteer">
             <img class="feedback_flag_gray" src="/images/flag_gray.png">
             <img class="feedback_flag" src="/images/flag.png">
         </a>
     </span>
     <span class="flag_tools_hidden message" style="display:none;">
-        Flag as:
-        <a href="#" class="control flag_as" title="Flag as inappropriate content" data-flag="inappropriate" data-key="{{key}}">inappropriate</a>
-        | <a href="#" class="control flag_as" title="Flag as low quality content" data-flag="lowquality" data-key="{{key}}">low quality</a>
-        | <a href="#" class="control flag_as" title="Flag as content that does not belong here" data-flag="doesnotbelong" data-key="{{key}}">does not belong here</a>
+       Rapporteer als:
+        <a href="#" class="control flag_as" title="Flag as inappropriate content" data-flag="inappropriate" data-key="{{key}}">ongepast</a>
+        | <a href="#" class="control flag_as" title="Flag as low quality content" data-flag="lowquality" data-key="{{key}}">lage kwaliteit</a>
+        | <a href="#" class="control flag_as" title="Flag as content that does not belong here" data-flag="doesnotbelong" data-key="{{key}}">hoort hier niet</a>
         | <a href="#" class="control flag_as" title="Flag as spam" data-flag="spam" data-key="{{key}}">spam</a>
     </span>
 </span>
