--- a/javascript/discussion-package/questions-area.handlebars
+++ b/javascript/discussion-package/questions-area.handlebars
@@ -25,10 +25,10 @@
                         <input class="simple-button green question_submit"
                                type="button"
                                value="Stel je vraag" />
-                        or <a href="#" class="question_cancel control">Cancel</a>
+                        or <a href="#" class="question_cancel control">Annuleer</a>
                     </div>
                     <div class="chars_remaining">
-                        <span class="chars_remaining_count">500</span> characters left
+                        <span class="chars_remaining_count">500</span> tekens over
                     </div>
                     <div class="clearFloat">&nbsp;</div>
                 </div>
