--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -88,7 +88,8 @@
                     <a href="/exercisedashboard" data-tag="Homepage C2A" class="call-to-action simple-button blue">Ga de uitdaging aan</a>
                 </div>
                 -->
-                    <a class="begin-button" href="/exercisedashboard"></a> <a href="/exercisedashboard">Begin met oefenen!</a>
+                  <a class="begin-button" href="/exercisedashboard"></a> <a id="exercisehomelink" href="/exercisedashboard">Begin met oefenen!</a>
+                
                 </div>
             </div>
         </div>
