--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -261,6 +261,7 @@ footer a:visited,
 a.visited-no-recolor:visited {
     color:rgb(0, 9, 112);
     text-decoration: none;
+    font-size: 14px;
 }
 
 a:visited {
@@ -270,6 +271,7 @@ a:visited {
 a:link:hover, a:link:focus, a:visited:hover, a:visited:focus {
     /* TODO why was this color defined here?color: #26008F;*/
     text-decoration: underline;
+    color:BABABA;
 }
 
 /*
@@ -1100,7 +1102,7 @@ nav {
     color: #222;
 }
 
-nav ul.page_links li, header ul.page_links li {
+nav ul.page_s li, header ul.page_links li {
     display: inline;
     white-space: nowrap;
 }
