--- a/templates/macros/discussion.html
+++ b/templates/macros/discussion.html
@@ -35,7 +35,7 @@
                 <textarea name="comment_text" class="comment_text" rows="3" cols="40">
                 </textarea>
                 <br/>
-                {{ feedback_controls_comment("Comment") }}
+                {{ feedback_controls_comment("Plaats opmerking") }}
             </form>
         </div>
 
