translation of a notification

--- a/templates/exercises/exercise_template.html
+++ b/templates/exercises/exercise_template.html
@@ -35,16 +35,16 @@
         {% if is_webos %}
 
         <p>
-            We're sorry. Your device is not supported for Khan Academy's practice exercises.
+            Onze excuses. Uw apparaat ondersteunt oefeningen maken op Khan Academie niet.
         </p>
 
         {% else %}
 
         <p>
-            You need to upgrade your browser to use Khan Academy's practice exercises.
+            U moet uw browser upgraden om oefeningen op Khan Academie te kunnen maken.
         </p>
         <p>
-            We suggest using
+            Wij raden u aan deze te downloaden:
             <a href="http://www.google.com/chrome/">Chrome</a>,
             <a href="http://www.mozilla.com/">Firefox</a>,
             <a href="http://www.apple.com/safari/">Safari</a>, or
@@ -58,10 +58,10 @@
 
     <div style="padding:0 9px; margin:0 1px; background: white;">
         <p style="margin-top: 0px;">
-            This specific problem from the past was created with a very old version of Khan Academy, and we're unable to show it to you. <strong>No progress has been lost.</strong> This inconvenience is restricted to very old problems, and it will not affect any current or future work.
+            Dit probleem was gemaakt met een hele oude versie van Khan Academie en we kunnen u deze versie niet laten zien. <strong>Er is geen vooruitgang verloren geraakt</strong> Dit ongemak is alleen bij hele oude problemen, en dit zal geen huidig of toekomstig werk beïnvloeden.
         </p>
         <p>
-            If you believe this is a mistake, please don't hesitate to <a href="/reportissue?type=Defect">let us know</a>.
+            Als je denkt dat dit een fout is, twijfel niet om het <a href="/reportissue?type=Defect">ons te laten weten</a>.
         <p/>
     </div>
 
