--- a/templates/badges/create_custom_badge.html
+++ b/templates/badges/create_custom_badge.html
@@ -17,7 +17,7 @@
     <div style="padding: 9px 23px;">
 
         {% if failed %}
-        <div style="color:red;padding-bottom:9px;">Badge creation failed. Either this badge already exists or the fields below were missing data.</div>
+        <div style="color:red;padding-bottom:9px;">Maken van badge niet gelukt. Het kan zijn dat de badge al bestaat of dat je niet alle onderstaande velden hebt ingevuld.</div>
         {% endif %}
 
         <div>
@@ -26,39 +26,39 @@
                 <table>
 
                     <tr>
-                        <td style="font-weight:bold;">Name</td>
+                        <td style="font-weight:bold;">Naam</td>
                         <td style="padding-bottom:9px;">
                             <input type="text" name="name" value="" maxlength="30"/><br/>
-                            <em>A unique name for this badge. This can never be changed and is not shown to the user.</em>
+                            <em>Een unieke naam voor de badge. Dit kan niet meer veranderen en is niet aan de gebruiker getoond.</em>
                         </td>
                     </tr>
 
                     <tr>
-                        <td style="font-weight:bold;">Description</td>
+                        <td style="font-weight:bold;">Beschrijving</td>
                         <td style="padding-bottom:9px;">
                             <input type="text" name="description" value="" maxlength="30"/><br/>
-                            <em>The short description of the badge, like "Great Streak" or "Perseverance." This is shown to the user.</em>
+                            <em>Een korte beschrijving van de badge, zoals 'Goede Reeks' of 'Uithoudingsvermogen'. Dit wordt aan de gebruiker getoond.</em>
                         </td>
                     </tr>
 
                     <tr>
-                        <td style="font-weight:bold;">Full description</td>
+                        <td style="font-weight:bold;">Volledige Beschrijving</td>
                         <td style="padding-bottom:9px;">
                             <textarea name="full_description" rows="5" cols="40"></textarea><br/>
-                            <em>An extended description of how or why the user earned this badge, usually phrased in the present tense.<br/>Examples: "Earn 100,000 energy points," "Remain a member of the Khan Academy for 3 years," "Achieve proficiency in 25 skills."</em>
+                            <em>Een uitgebreide beschrijving van hoe en waarom de gebruiker de badge heeft verdiend, meestal in de tegenwoordige tijd. <br/>Voorbeelden: "Verdien 100,000 energie punten," "Blijf 3 jaar lid van Khan Academie," "Wordt gevorderd in 25 vaardigheden."</em>
                         </td>
                     </tr>
 
                     <tr>
-                        <td style="font-weight:bold;">Points</td>
+                        <td style="font-weight:bold;">Punten</td>
                         <td style="padding-bottom:9px;">
                             <input type="text" name="points" value="0"/><br/>
-                            <em>How many points should be given to those who are awarded this badge?</em>
+                            <em>Hoe veel punten krijgt degene die deze badge behaald?</em>
                         </td>
                     </tr>
 
                     <tr>
-                        <td style="font-weight:bold;">Badge category</td>
+                        <td style="font-weight:bold;">Badge categorie</td>
                         <td style="padding-bottom:9px;">
                             <select name="badge_category" style="width:200px;">
                                 <option value="-1"></option>
@@ -70,11 +70,11 @@
                     </tr>
 
                     <tr>
-                        <td style="font-weight:bold;">Custom icon path</td>
+                        <td style="font-weight:bold;">Aangepaste icoon</td>
                         <td style="padding-bottom:9px;">
                             <input type="text" name="icon_src" value=""/><br/>
-                            <em>Leave blank to use standard icon for badge's category.<br/>
-                                Use a relative url like "/images/your-icon.png" to specify a custom icon to be used for this badge.</em>
+                            <em>Laat leeg om standaard plaatje van de categorie te gebruiken.<br/>
+                                Gebruik een gerelateerde URL zoals "/afbeeldingen/mijn-icoon.png" om de icoon voor deze badge te specificeren.</em>
                         </td>
                     </tr>
 
