Translation skills end of exercise

--- a/javascript/shared-package/small-exercise-icon.handlebars
+++ b/javascript/shared-package/small-exercise-icon.handlebars
@@ -1,28 +1,28 @@
 {{#if justEarnedProficiency}}
 
-<span class="small-exercise-icon node-complete" data-desc="You just earned proficiency in this skill"></span>
+<span class="small-exercise-icon node-complete" data-desc="Je bent bekwaam in deze vaardigheid."></span>
 
 {{else}}
 
 {{#if reviewing}}
 
-<span class="small-exercise-icon node-review" data-desc="You've earned proficiency in this skill. We think it's time for you to review it, because either it's been a while or you recently had some trouble."></span>
+<span class="small-exercise-icon node-review" data-desc="Je beheerst deze vaardigheid bijna, wellicht moet je het nog eens herhalen."></span>
 
 {{else}}
 
 {{#if proficient}}
 
-<span class="small-exercise-icon node-complete" data-desc="You've earned proficiency in this skill"></span>
+<span class="small-exercise-icon node-complete" data-desc="Je bent bekwaam in deze vaardigheid."></span>
 
 {{else}}
 
 {{#if suggested}}
 
-<span class="small-exercise-icon node-suggested" data-desc="You've completed all the pre-requisites for this skill, so we think you're ready for it"></span>
+<span class="small-exercise-icon node-suggested" data-desc="Je hebt aan alle vereisten voldaan, dus wij denken dat je er klaar voor bent."></span>
 
 {{else}}
 
-<span class="small-exercise-icon node-not-started" data-desc="This is a skill you can practice"></span>
+<span class="small-exercise-icon node-not-started" data-desc="Deze vaardigheid kan je oefenen"></span>
 
 {{/if}}
 {{/if}}
