--- a/templates/library_content_template.html
+++ b/templates/library_content_template.html
@@ -1,94 +1,38 @@
 {% import 'macros/library.html' as library %}
 
+<!-- Topic tree version: #{{ version_id }}, published {{ version_date }} -->
 <div id="library">
     <div id="library-content">
-        {{ library.column_major_order_styles() }}
         <div id="library-content-main">
-            {% for topic in topics recursive %}
-                {% if loop.first and topic.depth == 0 %}
-                    <div class="clear desktop-only">
-                        <a name="{{ topic.standalone_title|slugify|escape }}"
-                                                       id="{{ topic.standalone_title|slugify|escape }}">
-                            &nbsp
-                        </a>
-                    </div>
-                {% endif %}
-                <div data-role="page" id="{{ topic.id }}-container" data-theme="b">
-                    <div data-role="header" class="library-content-header">
-                        <a href="#" data-rel="back" data-icon="arrow-l" class="mobile-only">Back</a>
-                        {% if topic.depth %}
-                            <h2 class='subtopic-{{ topic.depth }}-heading {% if loop.first %}topic-heading-first{% endif %}'>
-                                <a href="{{ topic.topic_page_url }}">
-                                    {% if topic.homepage_title %}
-                                        {{ topic.homepage_title }}
-                                    {% else %}
-                                        {{ escape }}
-                                    {% endif %}
-                                </a>
-                            </h2>
-                        {% else %}
-                            <h2 class='topic-heading {% if loop.first %}topic-heading-first{% endif %} {% if root_topic and topic.id == root_topic.id %}root-topic{% endif %}'>
-                                <a href="{{ topic.topic_page_url }}">
-                                    {% if topic.homepage_title %}
-                                        {{ topic.homepage_title }}
-                                    {% else %}
-                                        {{ escape }}
-                                    {% endif %}
-                                </a>
-                            </h2>
-                        {% endif %}
-                        <a href="/" data-icon="home" data-iconpos="notext" data-direction="reverse"
-                           class="mobile-only"></a>
-                    </div>
-                    {% if topic.is_super or topic.content %}
-                        <div data-role="content" class="library-content-list">
-                            {% if topic.description %}
-                                <p class='topic-desc'>{{ topic.description }}</p>
-                            {% endif %}
-
-                            {% if topic.is_super %}
-                                <ul data-role="listview" data-inset="true" class="mobile-only">
-                                    {% for subtopic in topic.subtopics %}
-                                        <li><a href="#{{ subtopic.id|slugify|escape }}">{{ subtopic.title }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            {% endif %}
-
-                            {% if topic.content %}
-                                {% if ajax %}
-                                    <div style="height:{{ topic.height }}px;" data-role="listview" data-inset="true">
-                                        <span class="topic-loading">Loading videos...</span>
-                                    </div>
-                                {% else %}
-                                    {{ templatetags.column_major_sorted_videos(topic) }}
-                                {% endif %}
-                            {% endif %}
-
-                            <div class="clear desktop-only{% if topic.next_is_subtopic %} subtopic-jump-fix{% endif %}{% if topic.subtopics %} first{% endif %}">
-                                {% if topic.next %}
-                                    <a name="{{ topic.next.id|slugify|escape }}">&nbsp;</a>
-                                {% endif %}
-                            </div>
-                        </div>
-                    {% endif %}
-                </div>
-
-                {% if root_topic and topic.id == root_topic.id %}
-                    <div class="topic-spacer"></div>
-                {% endif %}
-                {% if topic.subtopics %}
-                    {{ loop(topic.subtopics) }}
-                {% endif %}
-
+            {% for topic in tree.subtopics recursive %}
+            <a id="{{ topic.id }}" href="{{ topic.topic_page_url }}"><h2>
+                      <img src="/images/power-mode/badges/default-40x40.png" />{{ topic.title }}
+              </h2>
+      </a>
+              <div style="margin-left:10px">
+              {% if topic.subtopics %}
+                {{ loop(topic.subtopics) }}
+              {% elif(topic.content) %}
+                <ul>
+                {% for content in topic.content %}
+                  <li>
+                  <span class="span2">{{ content.kind }}</span>
+                  <a href="{{content.ka_url}}">
+                  {% if content.kind == "Video" %}
+                    {{ content.title }}
+                  {% elif content.kind == "Exercise" %}
+                    {{ content.display_name }}
+                  {% endif %}
+                  </a>
+</a>
+                  </li>
+                {% endfor %}
+                </ul>
+              {% endif %}
+              </div>
             {% endfor %}
         </div>
     </div>
 </div>
 
-<!-- Topic tree version: #{{ version_id }}, published {{ version_date }} -->
 
-{# Pass along the caching information to the JS so that
-	when it makes its request for content, it can use this token #}
-{% if ajax %}
-    <script>var Homepage_cacheToken = {{ version_id }};</script>
-{% endif %}
