Show in map -> Toon in kaart

--- a/javascript/shared-package/knowledgemap-exercise.handlebars
+++ b/javascript/shared-package/knowledgemap-exercise.handlebars
@@ -1,7 +1,7 @@
 <div class="exercise-badge">
     <div class="skill-status" data-id="{{name}}">
 
-        <span class="pan-to simple-button" data-id="name" style="display:none;"><img src="/images/map-target.png" title="Show in map" alt="Show in map"></span>
+        <span class="pan-to simple-button" data-id="name" style="display:none;"><img src="/images/map-target.png" title="Toon op kaart" alt="Toon op kaart"></span>
 
         <h4 class="skill-bar-title">
             {{#with states}}{{> shared_small-exercise-icon}}{{/with}}
