Searchresults: Bekijk alle video's van het onderwerp

--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -145,7 +145,7 @@
                 {% endif %}
             {% endfor %}
             <li>
-                <a href="{{ topic.relative_url }}" data-tag="Search Body">See all videos from topic {{ topic.standalone_title|escape }}</a>
+                <a href="{{ topic.relative_url }}" data-tag="Search Body">Bekijk alle video's van het onderwerp {{ topic.standalone_title|escape }}</a>
             </li>
             </ol>
         {% endif %}
