Doelstelling aanmaken: Annuleer ipv Cancel

--- a/templates/goals/creategoal.html
+++ b/templates/goals/creategoal.html
@@ -22,7 +22,7 @@ function createGoalInitialize() {
 <form id="create-goal" action="javascript:">
     <div class="section-headline">
         <a id="goal-submit-button" onclick="javascript:GoalCreator.submit();" class="simple-button green">Maak een nieuwe doelstelling aan</a>
-        <a class="simple-button close goals-close-button">Cancel</a>
+        <a class="simple-button close goals-close-button">Annuleer</a>
         <span id="goal-commit-response" style="display:none;" class="goal-response-text"></span>
         <input type="text" name="title" class="goal-title simple-input ui-corner-all blur-on-esc" placeholder="Nieuwe doelstelling (Klik hier om een titel toe te voegen)"></input>
     </div>
