--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,6 +46,7 @@
                 </tr>
             </table>
         </div>
+        <div class="clear"></div>
         <div id="homepage-welcome-container">
             <iframe id="homepage-video" src="http://www.youtube.com/embed/tC80BNOKJtk"
                     frameborder="0"
