fixes BH-335 topic icon

--- a/javascript/exercises-package/exercise-header.handlebars
+++ b/javascript/exercises-package/exercise-header.handlebars
@@ -15,7 +15,7 @@ Review
     <span class="practice-exercise-displayname">{{practiceExercise.displayName}}</span>
     <span class="practice-exercise-topic-context">in </span>
     <span class="practice-exercise-topic-context solid-hover">
-        <img class="topic-exercise-image inline" src="{{topic.icon_name}}">
+        <img class="topic-exercise-image inline" src="{{topic.iconUrl}}">
         <a href=".">{{topic.standaloneTitle}}</a>
     </span>
     {{else}}
